Fix micro numbers wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1119,6 +1119,7 @@ body.dark-mode .iavm-header .main-header nav ul.nav-list li.menu-item.menu-item-
 }
 .home .location .arrive .transport .transport-item .content .micro-item .numbers {
     display: flex;
+    flex-wrap: wrap;
     gap: 14px;
     margin: 0;
     padding: 0;
